inventory apis done
