# src/routes/inventory.ts
@@ -1,8 +1,11 @@
 import {Router} from 'express';
-import { addInventory } from '../controllers/inventoryController';
+import { addInventory, getNewStock, getSummary } from '../controllers/inventoryController';
+import authMiddleware from '../middleware/authMiddleware';
 
 const inventoryRouter:Router=Router();
 
-inventoryRouter.post("/add", addInventory)
+inventoryRouter.post("/add", addInventory);
+inventoryRouter.get("/newStock",authMiddleware, getNewStock);
+inventoryRouter.get("/summary",authMiddleware, getSummary);
 
 export default inventoryRouter;
